--- a/src/components/Border/Border.module.scss
+++ b/src/components/Border/Border.module.scss
@@ -4,199 +4,195 @@
   width: 100%;
   height: 100%;
 }
-.style-panel{
+.style-panel {
   flex: 1;
 }
 .border {
-    background-color: #F7F7F9;
-    width: 70px;
-    height: 70px;
-    border-radius: 5px;
-    .border-top {
-      background-color: transparent;
-      border: 2px solid #d4d6d9;
-      width: 10px;
-      height: 10px;
-      margin: 5px auto;
-      border-top: 2px solid black;
-      cursor: pointer;
-    }
-    
-    .border-left {
-      background-color: transparent;
-      border: 2px solid #d4d6d9;
-      width: 10px;
-      height: 10px;
-      margin: 5px 6px;
-      border-left: 2px solid black;
-      cursor: pointer;
-    }
-    .border-right {
-      background-color: transparent;
-      border: 2px solid #d4d6d9;
-      width: 10px;
-      height: 10px;
-      margin: 5px 6px;
-      border-right: 2px solid black;
-      cursor: pointer;
-    }
-    
-    .border-full {
-      background-color: transparent;
-      border: 2px solid #5c5f66;
-      width: 10px;
-      height: 10px;
-      margin: 5px 6px;
-      cursor: pointer;
-    }
-    
-    .border-bottom {
-      background-color: transparent;
-      border: 2px solid #d4d6d9;
-      width: 10px;
-      height: 10px;
-      margin: 5px auto;
-      border-bottom: 2px solid black;
-      cursor: pointer;
-    }
-  }
-
-  .input_border {
-     margin-left: 1px;
-    height: 30px;
-  }
-
-  .style-left {
-    flex: 5;
-  }
-
-  .box-border-color{
-   display: flex;
-   width: 100%;
-  }
-  .select-style-border {
-    flex: 5;
-    margin-left: 5px;
-    margin-top: 6px;
-  }
-  .color-border{
-    margin-top: 6px;
-    margin-left: 6px;
-    flex:1;
-    // padding: 0;
-  }
-// Border radius
-.border-radius{
-  display: flex;
-  align-items: center;
-  .border-full-radius{
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    background-color: #F7F7F9;
-    display: flex;
-   align-items: center;
-   justify-content: center;
-   border-top-left-radius: 7px;
-  border-bottom-left-radius: 7px;
-  border-right:1px solid #e8e9eb;
-  .box-radius{
-  
+  background-color: #f7f7f9;
+  width: 70px;
+  height: 70px;
+  border-radius: 5px;
+  .border-top {
+    background-color: transparent;
+    border: 2px solid #d4d6d9;
     width: 10px;
     height: 10px;
+    margin: 5px auto;
+    border-top: 2px solid black;
+    cursor: pointer;
+  }
+
+  .border-left {
+    background-color: transparent;
+    border: 2px solid #d4d6d9;
+    width: 10px;
+    height: 10px;
+    margin: 5px 6px;
+    border-left: 2px solid black;
+    cursor: pointer;
+  }
+  .border-right {
+    background-color: transparent;
+    border: 2px solid #d4d6d9;
+    width: 10px;
+    height: 10px;
+    margin: 5px 6px;
+    border-right: 2px solid black;
+    cursor: pointer;
+  }
+
+  .border-full {
+    background-color: transparent;
     border: 2px solid #5c5f66;
-  }
-  }
-  .border-radius-direction{
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    background-color: #F7F7F9;
-    display: flex;
-   align-items: center;
-   justify-content: center;
-   border-top-right-radius: 7px;
-  border-bottom-right-radius: 7px;
-  margin-right: 5px;
-  .box-direction{
     width: 10px;
     height: 10px;
-    border: 2px dashed #5c5f66;
-     border-top: 2px solid black;
-     
-   }
+    margin: 5px 6px;
+    cursor: pointer;
+  }
+
+  .border-bottom {
+    background-color: transparent;
+    border: 2px solid #d4d6d9;
+    width: 10px;
+    height: 10px;
+    margin: 5px auto;
+    border-bottom: 2px solid black;
+    cursor: pointer;
   }
 }
 
+.input_border {
+  margin-left: 1px;
+  height: 30px;
+}
 
-.border-solid{
+.style-left {
+  flex: 5;
+}
+
+.box-border-color {
+  display: flex;
+  width: 100%;
+}
+.select-style-border {
+  flex: 5;
+  margin-left: 5px;
+  margin-top: 6px;
+}
+.color-border {
+  margin-top: 6px;
+  margin-left: 6px;
+  flex: 1;
+  // padding: 0;
+}
+// Border radius
+.border-radius {
+  display: flex;
+  align-items: center;
+  .border-full-radius {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    background-color: #f7f7f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    border-right: 1px solid #e8e9eb;
+    .box-radius {
+      width: 10px;
+      height: 10px;
+      border: 2px solid #5c5f66;
+    }
+  }
+  .border-radius-direction {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    background-color: #f7f7f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+    margin-right: 5px;
+    .box-direction {
+      width: 10px;
+      height: 10px;
+      border: 2px dashed #5c5f66;
+      border-top: 2px solid black;
+    }
+  }
+}
+
+.border-solid {
   border-style: solid;
   border: 1px solid black;
   width: 40px;
-
 }
-.border-dashed{
+.border-dashed {
   border-style: dashed;
   border: 1px dashed black;
-width:40px
+  width: 40px;
 }
-.border-dotted{
+.border-dotted {
   border-style: dotted;
   border: 1px dotted black;
- width: 40px;
-
+  width: 40px;
 }
-.json-show{
+.json-show {
   display: flex;
   flex-direction: column;
   white-space: pre-wrap;
 }
 
-
-.input-number-radius{
+.input-number-radius {
   display: flex;
-  flex:1
+  flex: 1;
 }
-.box-radius-setting{
-display: flex;
-width: 100%;
-margin-top: 10px;
+.box-radius-setting {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
 }
-.border-top-left, .border-top-right, .border-bottom-left{
+.border-top-left,
+.border-top-right,
+.border-bottom-left {
   margin-right: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.border-bottom-right{
+.border-bottom-right {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.icon-top-left{
+.icon-top-left {
   margin-top: 5px;
   border-top: 1px solid #5c5f66;
   border-left: 1px solid #5c5f66;
   width: 10px;
   height: 10px;
 }
-.icon-top-right{
+.icon-top-right {
   margin-top: 5px;
   border-top: 1px solid #5c5f66;
   border-right: 1px solid #5c5f66;
   width: 10px;
   height: 10px;
 }
-.icon-bottom-left{
+.icon-bottom-left {
   margin-top: 5px;
   border-bottom: 1px solid #5c5f66;
   border-left: 1px solid #5c5f66;
   width: 10px;
   height: 10px;
 }
-.icon-bottom-right{
+.icon-bottom-right {
   margin-top: 5px;
   border-bottom: 1px solid #5c5f66;
   border-right: 1px solid #5c5f66;
