--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.border {
+/* .border {
   background-color: #F7F7F9;
   /* border: 1px solid gray; */
-  width: 70px;
-  height: 70px;
+width: 70px;
+height: 70px;
 }
 
 .border-top {
@@ -77,3 +77,5 @@
   height: 100%;
   border: 1px solid black;
 }
+
+*/
